# nwg-launchers

bar/: bar.cc
common/: nwg_classes.cc  nwg_classes.h  nwg_tools.cc  nwg_tools.h
dmenu/: dmenu.cc  dmenu.h  dmenu_classes.cc
grid/: grid.cc  grid.h  grid_launcher.cc  grid_tools.cc  meson.build
